# libkcnf

./: .gitignore  CMakeLists.txt
demo/: kcnf.c
include/kcnf/: base64.h  kcnf.h
src/: a.out  base64.c  base64.h  dump.c  dump.h  kcnf.c  kcnf.h  list.c  list.h  pair.c  pair.h  parse.c  parse.h  test.kcnf  util.c  util.h  value.c  value.h
